<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueDark"
    android:orientation="vertical"
    tools:context="ru.mikhailskiy.intensiv.ui.movie_details.MovieDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/movie_image_toolbar_height"
            android:contentDescription="@string/movie_image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/aqua_man" />

        <ImageView
            android:id="@+id/movie_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/material_margin_normal"
            android:layout_marginTop="@dimen/material_margin_big"
            android:contentDescription="@string/back_arrow_description"
            android:src="@drawable/ic_left_arrow" />

        <CheckBox
            android:id="@+id/movie_like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/material_margin_big"
            android:layout_marginEnd="@dimen/material_margin_normal"
            android:background="@drawable/button_heart_movie_selector"
            android:button="@null" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_margin_normal">

                <TextView
                    android:id="@+id/title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/material_margin_normal"
                    android:layout_toStartOf="@+id/full_hd_image_view"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tv_show_card_text_size"
                    android:textStyle="bold"
                    tools:text="Заголовок карточки"
                    tools:textColor="@color/white" />

                <ImageView
                    android:id="@+id/full_hd_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/material_margin_normal"
                    android:contentDescription="@string/fullhd_icon_description"
                    android:src="@drawable/ic_4k_fullhd" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_margin_normal"
                android:layout_marginBottom="@dimen/material_margin_normal">

                <Button
                    android:id="@+id/watch_movie_button"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/material_margin_normal"
                    android:background="@drawable/button_watch_bg"
                    android:text="@string/button_watch"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/movie_rating"
                    style="@style/Base.Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/material_margin_normal"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressBackgroundTint="@color/colorControlNormal"
                    android:stepSize="0.5"
                    tools:rating="5" />

            </RelativeLayout>

            <TextView
                android:id="@+id/overview_movie_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/material_margin_normal"
                android:layout_marginEnd="@dimen/material_margin_normal"
                android:textColor="@color/grey"
                tools:text="a long-long description for a selected movie" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/actors_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/material_margin_normal"
                android:layout_marginTop="@dimen/material_margin_normal"
                android:layout_marginEnd="@dimen/material_margin_normal"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/item_actor" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/material_margin_normal"
                android:layout_marginTop="@dimen/material_margin_normal">

                <TextView
                    android:id="@+id/title_studio_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/studio"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tile_genre_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/studio_text_view"
                    android:layout_marginTop="@dimen/material_margin_small"
                    android:text="@string/genre"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/title_year_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/genre_text_view"
                    android:layout_marginTop="@dimen/material_margin_small"
                    android:text="@string/year"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/studio_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/material_margin_normal"
                    android:layout_toEndOf="@+id/title_studio_text_view"
                    android:textColor="@color/grey"
                    tools:text="Warner Bros." />

                <TextView
                    android:id="@+id/genre_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/studio_text_view"
                    android:layout_alignStart="@+id/studio_text_view"
                    android:layout_alignTop="@+id/tile_genre_text_view"
                    android:textColor="@color/grey"
                    tools:text="Action, Adventure, Fantasy" />

                <TextView
                    android:id="@+id/year_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/genre_text_view"
                    android:layout_alignStart="@+id/genre_text_view"
                    android:layout_alignTop="@+id/title_year_text_view"
                    android:textColor="@color/grey"
                    tools:text="2018" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>